# Adjeff

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml  publish.yml
docs/source/: atmosphere.rst  conf.py  core.rst  index.rst  modules.rst  utils.rst
docs/source/_static/: custom.css
notebooks/: 01-create-and-display-image.ipynb  02-atmospheric-configuration.ipynb  03-compute-radiative-quantities.ipynb  04-simulate-rho-toa.ipynb  05-compute-2d-radiative-from-maja-output.ipynb  06-learn-psf.ipynb
scripts/: demo_config_bundle.py  demo_sweep.py  generate_king_lut.py  main.py  test_atm_psf.py  test_config_dunble.py  test_large_spatial_tdir_down.py  test_maja_loader.py  test_optimizer.py  test_radiative_samplers.py  test_rho_toa.py  test_rho_toa_2d.py
scripts/article1/: figure2.py  figure3.py  figure4.py  figure5.py  figure7_17.py  generate_psf_param_lut.py
scripts/article1/shell/: generate_figures.sh  generate_psf_luts.sh
src/adjeff/: __init__.py  accessor.py  api.py  exceptions.py
src/adjeff/atmosphere/: __init__.py  _config.py  atmo_config.py  atmo_factory.py  geo_config.py  spectral_config.py  surface.py
src/adjeff/core/: __init__.py  _psf.py  analytical_psf.py  bands.py  image_dict.py  image_generator.py  non_analytical_psf.py  psf_dict.py
src/adjeff/modules/: __init__.py  _scene_module.py  _scene_module_sweep.py  model_5s.py  pipeline.py  scene_module.py  scene_module_sweep.py  scene_source.py  test_module.py
src/adjeff/modules/classic/: __init__.py  toa_to_unif.py  unif_to_toa.py
src/adjeff/modules/loaders/: __init__.py  maja_loader.py  product_loader.py
src/adjeff/modules/models/: __init__.py  model_5s.py  psf_conv_module.py  unif2surface.py
src/adjeff/modules/samplers/: __init__.py  _smartg.py  psf_atm.py  radiatives.py  rho_atm.py  rho_toa.py  rho_toa_sym.py  sph_alb.py  tdif_down.py  tdif_up.py  tdir_down.py  tdir_up.py
src/adjeff/optim/: __init__.py  _combo_stage.py  _config.py  adam_optimizer.py  landscape.py  lbfgs_optimizer.py  loss.py  metrics.py  optimizer.py  training_set.py
src/adjeff/sweep/: __init__.py  _dedup.py  bundle.py
src/adjeff/utils/: __init__.py  _config.py  cache_store.py  config_bundle.py  convolve.py  logger.py  radial.py  smartgutils.py  sweep.py  torchutils.py  xrutils.py
tests/: conftest.py  test_accessor.py  test_atmosphere_config.py  test_classic_modules.py  test_config.py  test_convolve.py  test_image_dict.py  test_image_generator.py  test_modules_5s.py  test_psf.py  test_psf_dict.py  test_radial.py  test_scene_module.py  test_scene_module_sweep.py  test_xrutils.py
