[project]
authors = [{ name = "walcark", email = "kevin.walcarius@cnes.fr" }]
dependencies = []
name = "adjeff"
requires-python = ">=3.11,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
adjeff = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.11,<3.13"
pydantic = ">=2.12.5,<3"
smartg = ">=1.1.3,<2"
luts = ">=1.0.6,<2"
einops = ">=0.8.2,<0.9"
xarray = ">=2026.1.0,<2027"
numpy = ">=2.4.2,<3"
pandas = ">=3.0.0,<4"
colorlog = "*"

[tool.pixi.environments]
cpu = ["cpu"]
default = ["gpu"]
test = ["test"]

[tool.pixi.feature.gpu]
system-requirements = { cuda = "12.6" }
dependencies = { cuda-version = "12.6.*", pytorch-gpu = "*" }

[tool.pixi.feature.cpu]
dependencies = { pytorch-cpu = "*" }

[tool.pixi.feature.test]
dependencies = { pytest = ">=9.0.2,<10" }
tasks = { test = { cmd = "pytest" } }

[tool.ruff]
line-length = 79
