[project]
authors = [{ name = "walcark", email = "kevin.walcarius@cnes.fr" }]
dependencies = []
name = "adjeff"
requires-python = ">=3.11,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
adjeff = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.11,<3.13"
pydantic = ">=2.12.5,<3"
smartg = ">=1.1.3,<2"
luts = ">=1.0.6,<2"
einops = ">=0.8.2,<0.9"
xarray = ">=2026.1.0,<2027"
numpy = ">=2.4.2,<3"
pandas = ">=3.0.0,<4"
colorlog = "*"

[tool.pixi.environments]
cpu = ["cpu"]
default = ["gpu"]
dev = ["dev"]

[tool.pixi.feature.gpu]
system-requirements = { cuda = "12.6" }
dependencies = { cuda-version = "12.6.*", pytorch-gpu = "*" }

[tool.pixi.feature.cpu]
dependencies = { pytorch-cpu = "*" }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.11"
pre-commit = ">=4.2"

[tool.pixi.feature.dev.tasks]
fmt = { cmd = "ruff format ." }
lint = { cmd = "ruff check" }
test = { cmd = "pytest --cov" }
all = { depends-on = ["fmt", "lint", "test"] }

[tool.ruff]
line-length = 79
indent-width = 4
exclude = ["tests/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
fixable = ["ALL"]
unfixable = []
pydocstyle = { convention = "numpy" }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
