[project]
name = "adjeff"
version = "0.1.0"
authors = [{ name = "walcark", email = "kevin.walcarius@gmail.com" }]
readme = "README.md"
description = "Library that provides utilities to simulate adjacency effects."
requires-python = ">=3.11,<3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/walcark/Adjeff"
Issues = "https://github.com/walcark/Adjeff/issues"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling >= 1.26"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
adjeff = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.11,<3.13"
pydantic = ">=2.12.5,<3"
smartg = ">=1.1.3,<2"
luts = ">=1.0.6,<2"
einops = ">=0.8.2,<0.9"
xarray = ">=2026.1.0,<2027"
numpy = ">=2.4.2,<3"
pandas = ">=3.0.0,<4"
colorlog = "*"

[tool.pixi.feature.gpu]
system-requirements = { cuda = "12.6" }
dependencies = { cuda-version = "12.6.*", pytorch-gpu = "*" }

[tool.pixi.feature.cpu]
dependencies = { pytorch-cpu = "*" }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.11"
pre-commit = ">=4.2"
mypy = ">=1.5"
scipy = "*"

[tool.pixi.environments]
cpu = ["cpu"]
default = ["gpu"]
dev = ["dev", "gpu"]

[tool.pixi.feature.dev.tasks]
fmt = { cmd = "ruff format ." }
lint = { cmd = "ruff check" }
type-check = { cmd = "mypy src/adjeff --strict" }
test = { cmd = "pytest --cov" }
all = { depends-on = ["fmt", "lint", "type-check", "test"] }
ensure-pip = { cmd = "python -m ensurepip --upgrade" }
install-build = { cmd = "python -m pip install --upgrade build twine" }
install-sphinx = { cmd = "python -m pip install --upgrade sphinx sphinx-rtd-theme" }
build-doc = { cmd = "sphinx-build -b html source build/html", cwd = "docs" }
build = { cmd = "python -m build" }
upload-testpypi = { cmd = "python -m twine upload --repository testpypi dist/*" }

[tool.ruff]
fix = true
line-length = 79
indent-width = 4
exclude = ["tests/*", "docs/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
fixable = ["ALL"]
unfixable = []
pydocstyle = { convention = "numpy" }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
